--- a/.github/workflows/build_release_workflow.yml
+++ b/.github/workflows/build_release_workflow.yml
@@ -2,9 +2,8 @@ name: Android CI
 
 on:
   push:
-    branches: [ "develop" ]
-  pull_request:
-    branches: [ "develop" ]
+    branches:
+    - develop
 
 jobs:
   build:
